--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,12 +3,6 @@
           <div class="container">
             <div class="row">
               <div class="col s12 m12 l4">
-
-               <i class="mdi mdi-hexagon mdi-48px"></i>
-               <i class="mdi mdi-hexagon mdi-48px orange"></i>
-               <i class="mdi mdi-bell"></i>  <!-- bell -->
-               <i class="mdi mdi-hexagon mdi-48px orange"></i>
-
                  <p class="uppercase white-text font-thin footer-thin" style="font-size:32px;"><span class="highlight">Find</span> the right tool <br>for your inspection</p>
                  <div class="social-media">
                       <i class="mdi mdi-bell"></i>
@@ -37,6 +31,17 @@
           <div class="footer-copyright">
             <div class="container">
             © 2014 Copyright Text
+
+            <div class="soc">
+              <a href="" class="soc-facebook" title="Facebook"></a>
+              <a href="" class="soc-twitter" title="Twitter"></a>
+              <a href="" class="soc-instagram" title="Instagram"></a>
+              <a href="" class="soc-pinterest" title="Pinterest"></a>
+              <a href="" class="soc-youtube" title="YouTube"></a>
+              <a href="" class="soc-rss" title="Rss"></a>
+          </div>
+
+
             </div>
           </div>
       </footer>
