--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_self
+ *= require _font-awesome
  */
 
 @import "material.scss";
@@ -21,3 +22,5 @@
 @import "mixins.scss";
 @import "custom.scss";
 @import "font.scss";
+//@import "font-awesome-sprockets";
+@import "font-awesome";
