--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -78,7 +78,7 @@
         <div class="col s12 m6 l6">
              <div class="card z-depth-0 card-hover  " >
                <div class="card-image waves-effect waves-block waves-light  spi-card-large">
-                 <img class="activator" src="https://content.screencast.com/users/carolokausp/folders/Jing/media/7303c464-f615-4a2a-ae13-c948d837d3d9/00000020.png">
+                 <%=image_tag( root_url + "images/jcm-3000-series.jpg", size: "91x60" ,  alt: "Example Image", class:"activator")%>
                </div>
                <div class="card-content spi">
                  <h3 class="header-product-catalog">JCM Series</h3>
@@ -109,16 +109,16 @@
 
           <div class="row  clear-80">
             <div class="col s12 m4 l4" style="text-align:center;">
-                     <span class="easy-steps" >1</span><i class="material-icons icon-yellow medium">stay_primary_portrait</i>
+                     <span class="easy-steps" >1</span><%=image_tag( root_url + "images/pic3.png", size: "91x60" ,  alt: "Example Image")%>
                      <p class="easy-steps-caption">Contact Us</p>
 
             </div>
             <div class="col s12 m4 l4" style="text-align:center;">
-                     <span class="easy-steps" >2</span><i class="material-icons icon-yellow medium">stay_primary_portrait</i>
+                     <span class="easy-steps" >2</span><%=image_tag( root_url + "images/pic2.png", size: "91x60" ,  alt: "Example Image")%>
                      <p class="easy-steps-caption">Pick date & Location</p>
             </div>
             <div class="col s12 m4 l4" style="text-align:center;">
-                     <span class="easy-steps" >3</span><i class="material-icons icon-yellow medium">dialer_sip</i>
+                     <span class="easy-steps" >3</span><%=image_tag( root_url + "images/pic1.png", size: "91x60" ,  alt: "Example Image")%>
                      <p class="easy-steps-caption">We Deliver Demo</p>
             </div>
           </div>
@@ -172,28 +172,36 @@
           <div class="col s12 m12 l12">
             <h2 class="header-dark-yellow">Testimonials</h2>
 
-                <div class="carousel carousel-slider center" data-indicators="true">
+               <div class="carousel carousel-slider center"  data-indicators="true">
                    <div class="carousel-fixed-item center">
                    </div>
-                    <a class="waves-effect waves-light arrow-left"><i class="material-icons  medium ">keyboard_arrow_left</i></a>
-                    <a class="waves-effect waves-light arrow-right"><i class="material-icons  medium ">keyboard_arrow_right</i></a>
+                      <!-- <a data-slide="prev" class="waves-effect waves-light arrow-left next carousel-control left" data-slide="next"><i class="material-icons  medium ">keyboard_arrow_left</i></a>
+                      <a data-slide="next" class="waves-effect waves-light arrow-right prev carousel-control right" data-slide="prev"><i class="material-icons  medium ">keyboard_arrow_right</i></a> -->
 
-                   <div class="carousel-item  white-text" href="#one!">
-                       <p class="white-text testimonial"> We needed a borescope with the <span class="bold">excellent </br>resolution. The DG1 worked perfectly!</span><br>-Energy servcies provider</p>
+                     <div class="carousel-item  white-text" href="#one!">
+                       <div class="quotes-testimonial" style="float:left;" ><%=image_tag( root_url + "images/quotes.png", size: "91x85" ,  alt: "Example Image", class:"activator")%></div>
+                         <p class="white-text testimonial">
+                           We needed a borescope with the <span class="bold">excellent resolution. The DG1 worked perfectly!</span><br>-Energy servcies provider
+                         </p>
+                        </div>
+                       <div class="carousel-item white-text" href="#two!">
+                          <div class="quotes-testimonial" style="float:left;" ><%=image_tag( root_url + "images/quotes.png", size: "91x85" ,  alt: "Example Image", class:"activator")%></div>
+                       <p class="white-text testimonial">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy <br>-text ever since the 1500s</p>
                    </div>
-                   <!-- <div class="carousel-item white-text" href="#two!">
+                   <div class="carousel-item white-text" href="#three!">
+                     <div class="quotes-testimonial" style="float:left;" ><%=image_tag( root_url + "images/quotes.png", size: "91x85" ,  alt: "Example Image", class:"activator")%></div>
                      <p class="white-text testimonial">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy <br>-text ever since the 1500s</p>
-                   </div> -->
+                  </div>
                 </div>
 
-                   <!-- <div class="carousel-arrow">
+                    <!--<div class="carousel-arrow">
                         <a data-slide="prev" href="portfolio_item1.html#myCarousel" class="left carousel-control">
                             <i class="fa fa-angle-left"></i>
                         </a>
                         <a data-slide="next" href="portfolio_item1.html#myCarousel" class="right carousel-control">
                             <i class="fa fa-angle-right"></i>
                         </a>
-                    </div> -->
+                    </div>-->
 
             </div>
           </div>
