--- a/app/assets/stylesheets/materialize.scss
+++ b/app/assets/stylesheets/materialize.scss
@@ -90,9 +90,9 @@
 // @import "materialize/components/icons-material-design";
 // @import "materialize/components/grid";
 // @import "materialize/components/navbar";
-// //@import "materialize/components/lato";
+// @import "materialize/components/lato";
 // @import "materialize/components/typography";
-// //@import "materialize/components/sizer";
+// @import "materialize/components/sizer";
 // @import "materialize/components/cards";
 // @import "materialize/components/toast";
 // @import "materialize/components/tabs";
@@ -110,10 +110,10 @@
 // @import "materialize/components/preloader";
 // @import "materialize/components/slider";
 // @import "materialize/components/carousel";
-// //@import "materialize/components/tools";
-// //@import "materialize/components/progress";
-// //@import "materialize/components/picnic";
-// //@import "materialize/components/balloon";
+// @import "materialize/components/tools";
+// @import "materialize/components/progress";
+// @import "materialize/components/picnic";
+// @import "materialize/components/balloon";
 // @import "materialize/components/datatables";
 // @import "materialize/components/date_picker/default";
 // @import "materialize/components/date_picker/default.date";
