--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,9 +4,15 @@
             <div class="row">
               <div class="col s12 m12 l4">
                  <p class="uppercase white-text font-thin footer-thin" style="font-size:32px;"><span class="highlight">Find</span> the right tool <br>for your inspection</p>
-                 <div class="social-media">
-                      <i class="mdi mdi-bell"></i>
-                      <i class="mdi mdi-home-modern" aria-hidden="true"></i>
+                 <div class="social-media" style="margin-top: 50px;">
+                    <ul>
+                       <li style="display: inline;margin-right:7px;"><a class="btn-floating waves-effect waves-blue" ><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                       <li style="display: inline;margin-right:7px;"><a class="btn-floating waves-effect waves-blue" ><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                       <li style="display: inline;margin-right:7px;"><a class="btn-floating waves-effect waves-blue" ><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                       <li style="display: inline;margin-right:7px;"><a class="btn-floating waves-effect waves-blue" ><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                       <li style="display: inline;margin-right:7px;"><a class="btn-floating waves-effect waves-blue" ><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                       <li style="display: inline;margin-right:7px;"><a class="btn-floating waves-effect waves-blue" ><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                   </ul>
                  </div>
               </div>
               <div class="col s12 m12 l4">
@@ -31,7 +37,6 @@
           <div class="footer-copyright">
             <div class="container">
             © 2014 Copyright Text
-
             <div class="soc">
               <a href="" class="soc-facebook" title="Facebook"></a>
               <a href="" class="soc-twitter" title="Twitter"></a>
