--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,5 +1,15 @@
-<h1>THIS IS SPI ABOUT PAGE</h1>
+<!-- <h1>THIS IS SPI ABOUT PAGE</h1>
 
 
 
-<%= link_to 'Home', welcome_home_path %>
+<%= link_to 'Home', welcome_home_path %> -->
+
+
+<%= render 'layouts/header' %>
+
+
+<%= render 'layouts/main' %>
+
+
+
+<%= render 'layouts/footer' %>
